--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<head>
-		<title>Dropbox</title>
+		<title>Dropbox for Business</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 		<link href="https://cf.dropboxstatic.com/static/images/favicon-vflk5FiAC.ico" rel="shortcut icon">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="assets/css/dropbox.css">
-		<script src="assets/scripts/jquery-2.1.3.min.js"></script>		
+		<script src="assets/scripts/jquery-2.1.3.min.js"></script>	
 		<script src="assets/scripts/dropbox.js"></script>
 	</head>
 	<body>
@@ -123,7 +123,17 @@
 				</div>
 			</section>
 			<section id="dropbox-demo-video" class="content">
-				<div class="bg-image"></div>
+				<div class="row p-t-lg">
+					<div class="col-4"></div>
+					<div class="col-4">
+						<h2 class"video-title">Work together simply with Dropbox for Business</h2>
+					</div>
+				</div>
+				<div class="play-btn"></div>
+				<video class="video" width="100%" height="100%" controls="">
+					<source src="assets/videos/video_dfb_small.mov" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
 			</section>
 			<section id="try-dropbox" class="content">
 				<div class="row p-t-lg">
@@ -133,7 +143,7 @@
 					<a href="" class="try-it-now btn btn-lg btn-inverse">Try it now</a>
 				</div>
 				<div class="row p-b-xl">
-					<a href="" class="buy-link">or buy for $15 / user / month</a>
+					<a href="" class="buy-link-inverse">or buy for $15 / user / month</a>
 				</div>
 			</section>
 			<footer id="footer">
@@ -194,6 +204,11 @@
 							</ul>
 						</nav>
 					</div>
+					<div class="region-selector">
+						<a href="" class="language-link">
+							English
+						</a>
+					</div>			
 				</div>
 			</footer>
 		</main>		
