--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<link href="https://cf.dropboxstatic.com/static/images/favicon-vflk5FiAC.ico" rel="shortcut icon">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="assets/css/dropbox.css">
-		<script src="assets/scripts/jquery-2.1.3.min.js"></script>	
+		<script src="assets/scripts/jquery-2.1.3.min.js"></script>
+		<script src="assets/scripts/imageAnimator.js"></script>
 		<script src="assets/scripts/dropbox.js"></script>
 	</head>
 	<body>
@@ -25,13 +26,13 @@
 					<div class="col-3 p-t-md">
 						<nav>
 							<ul class="navbar navbar-side">
-								<li><a href="">Business home</a></li>
-								<li><a href="">Overview</a></li>
-								<li><a href="">Uses</a></li>
-								<li><a href="">Resources</a></li>
-								<li><a href="">Customers</a></li>
-								<li><a href="">Pricing</a></li>
-								<li><a href="">Contact</a></li>
+								<li><a href="#">Business home</a></li>
+								<li><a href="#">Overview</a></li>
+								<li><a href="#">Uses</a></li>
+								<li><a href="#">Resources</a></li>
+								<li><a href="#">Customers</a></li>
+								<li><a href="#">Pricing</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -44,7 +45,7 @@
 							<a href="#" class="btn btn-lg btn-primary">Try it free</a>
 						</div>
 						<span class="button-help-text">
-							or <a href="" class="buy-link text-white">buy for $15 / user / month</a>
+							or <a href="#" class="buy-link text-white">buy for $15 / user / month</a>
 						</span>
 					</div>
 				</div>
@@ -58,7 +59,7 @@
 				</div>
 				<div class="row">
 					<article class="col-4">
-						<div>
+						<div class="animate-image-wrapper">
 							<img src="assets/images/dropbox-for-business-why-devices@2x.png" alt="" class="animate-image">
 						</div>
 						<div>
@@ -67,7 +68,7 @@
 						</div>
 					</article>
 					<article class="col-4">
-						<div>
+						<div class="animate-image-wrapper">
 							<img src="assets/images/dropbox-for-business-why-watch@2x.png" alt="" class="animate-image">
 						</div>
 						<div>
@@ -76,7 +77,7 @@
 						</div>
 					</article>
 					<article class="col-4">
-						<div>
+						<div class="animate-image-wrapper">
 							<img src="assets/images/dropbox-for-business-why-key@2x.png" alt="" class="animate-image">
 						</div>
 						<div>
@@ -87,7 +88,7 @@
 				</div>
 				<div class="row p-t p-b-lg">
 					<div class="col-12">
-						<a href="" class="btn btn-primary">Learn more</a>
+						<a href="#" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
 			</section>
@@ -100,14 +101,14 @@
 				</div>
 				<div class="row carousel">
 					<div class="col-12">
-						<a href=""><img src="assets/images/arrow-left@2x.png" alt="" class="arrow m-r-xl"></a>
+						<a href="#"><img src="assets/images/arrow-left@2x.png" alt="" class="arrow m-r-xl"></a>
 						<img src="assets/images/BCBG@2x.jpg" alt="" class="image">
-						<a href=""><img src="assets/images/arrow-right@2x.png" alt="" class="arrow m-l-xl"></a>
+						<a href="#"><img src="assets/images/arrow-right@2x.png" alt="" class="arrow m-l-xl"></a>
 					</div>
 					<div class="col-12">
-						<a href=""><div class="dot active"></div></a>
-						<a href=""><div class="dot"></div></a>
-						<a href=""><div class="dot"></div></a>
+						<a href="#"><div class="dot active"></div></a>
+						<a href="#"><div class="dot"></div></a>
+						<a href="#"><div class="dot"></div></a>
 					</div>					
 				</div>
 				<div class="row">
@@ -118,7 +119,7 @@
 				</div>
 				<div class="row p-t p-b-lg">
 					<div class="col-12">
-						<a href="" class="btn btn-primary">Learn more</a>
+						<a href="#" class="btn btn-primary">Learn more</a>
 					</div>
 				</div>
 			</section>
@@ -140,10 +141,10 @@
 					<h2>Get your team in sync</h2>
 				</div>
 				<div class="row">
-					<a href="" class="try-it-now btn btn-lg btn-inverse">Try it now</a>
+					<a href="#" class="try-it-now btn btn-lg btn-inverse">Try it now</a>
 				</div>
 				<div class="row p-b-xl">
-					<a href="" class="buy-link-inverse">or buy for $15 / user / month</a>
+					<a href="#" class="buy-link-inverse">or buy for $15 / user / month</a>
 				</div>
 			</section>
 			<footer id="footer">
@@ -152,10 +153,10 @@
 						<nav>
 							<ul class="navbar">
 								<li>Business</li>
-								<li><a href="">Home</a></li>
-								<li><a href="">Desktop client</a></li>
-								<li><a href="">Mobile</a></li>
-								<li><a href="">Pricing</a></li>
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Desktop client</a></li>
+								<li><a href="#">Mobile</a></li>
+								<li><a href="#">Pricing</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -163,12 +164,12 @@
 						<nav>
 							<ul class="navbar">
 								<li>Resources</li>
-								<li><a href="">Blog</a></li>
-								<li><a href="">Help</a></li>
-								<li><a href="">Partners</a></li>
-								<li><a href="">Documentation</a></li>
-								<li><a href="">Purchasing FAQ</a></li>
-								<li><a href="">Buy</a></li>
+								<li><a href="#">Blog</a></li>
+								<li><a href="#">Help</a></li>
+								<li><a href="#">Partners</a></li>
+								<li><a href="#">Documentation</a></li>
+								<li><a href="#">Purchasing FAQ</a></li>
+								<li><a href="#">Buy</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -176,9 +177,9 @@
 						<nav>
 							<ul class="navbar">
 								<li>Support</li>
-								<li><a href="">Help center</a></li>
-								<li><a href="">Get started</a></li>
-								<li><a href="">Contact us</a></li>
+								<li><a href="#">Help center</a></li>
+								<li><a href="#">Get started</a></li>
+								<li><a href="#">Contact us</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -186,9 +187,9 @@
 						<nav>
 							<ul class="navbar">
 								<li>Community</li>
-								<li><a href="">Developers</a></li>
-								<li><a href="">Referrals</a></li>
-								<li><a href="">Integrations</a></li>
+								<li><a href="#">Developers</a></li>
+								<li><a href="#">Referrals</a></li>
+								<li><a href="#">Integrations</a></li>
 							</ul>
 						</nav>
 					</div>
@@ -196,16 +197,16 @@
 						<nav>
 							<ul class="navbar">
 								<li>Connect</li>
-								<li><a href="">Twitter</a></li>
-								<li><a href="">Facebook</a></li>
-								<li><a href="">Google+</a></li>
-								<li><a href="">Youtube</a></li>
-								<li><a href="">Blogs</a></li>
+								<li><a href="#">Twitter</a></li>
+								<li><a href="#">Facebook</a></li>
+								<li><a href="#">Google+</a></li>
+								<li><a href="#">Youtube</a></li>
+								<li><a href="#">Blogs</a></li>
 							</ul>
 						</nav>
 					</div>
 					<div class="region-selector">
-						<a href="" class="language-link">
+						<a href="#" class="language-link">
 							English
 						</a>
 					</div>			
