--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="assets/css/dropbox.css">
 		<script src="assets/scripts/jquery-2.1.3.min.js"></script>
 		<script src="assets/scripts/imageAnimator.js"></script>
+		<script src="assets/scripts/carousel.js"></script>
 		<script src="assets/scripts/dropbox.js"></script>
 	</head>
 	<body>
@@ -99,17 +100,15 @@
 						<h2>What can Dropbox for Business do for your team?</h2>
 					</div>
 				</div>
-				<div class="row carousel">
+				<div id="business-page-carousel" class="row carousel">
 					<div class="col-12">
-						<a href="#"><img src="assets/images/arrow-left@2x.png" alt="" class="arrow m-r-xl"></a>
+						<figure class="left-arrow m-r-xl"></figure>
 						<img src="assets/images/BCBG@2x.jpg" alt="" class="image">
-						<a href="#"><img src="assets/images/arrow-right@2x.png" alt="" class="arrow m-l-xl"></a>
+						<img src="assets/images/asana@2x.jpg" alt="" class="image">
+						<img src="assets/images/centric@2x.jpg" alt="" class="image">
+						<figure class="right-arrow m-l-xl"></figure>
 					</div>
-					<div class="col-12">
-						<a href="#"><div class="dot active"></div></a>
-						<a href="#"><div class="dot"></div></a>
-						<a href="#"><div class="dot"></div></a>
-					</div>					
+					<div class="navigation col-12"></div>
 				</div>
 				<div class="row">
 					<div class="col-4"></div>
