media queries, responsivenessssssssss

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 			<section id="header">
 				<div class="header-bg-image"></div>
 				<div class="row">
-					<div class="col-12 p-t-lg p-b">
+					<div id="icon-row" class="col-12 p-t-lg p-b">
 						<img class="dropbox-icon" src="assets/images/white_dropbox_glyph@2x.png">
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-3 p-t-md">
+					<div id="page-menu" class="col-3 p-t-md">
 						<nav>
 							<ul class="navbar navbar-side">
 								<li><a href="#">Business home</a></li>
