--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="row p-t-lg">
 					<div class="col-4"></div>
 					<div class="col-4">
-						<h2 class"video-title">Work together simply with Dropbox for Business</h2>
+						<h2 class="video-title">Work together simply with Dropbox for Business</h2>
 					</div>
 				</div>
 				<div class="play-btn"></div>
