responsive navbar menun

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
 	</head>
 	<body>
 		<main id="container">
+			<nav id="mobile-menu">
+				<ul class="navbar navbar-main">
+					<li><a href="#">Business home</a></li>
+					<li><a href="#">Overview</a></li>
+					<li><a href="#">Uses</a></li>
+					<li><a href="#">Resources</a></li>
+					<li><a href="#">Customers</a></li>
+					<li><a href="#">Pricing</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</nav>
 			<section id="header">
 				<div class="header-bg-image"></div>
+				<a href="" class="mobile-menu-btn btn">Menu</a>
 				<div class="row">
 					<div id="icon-row" class="col-12 p-t-lg p-b">
 						<img class="dropbox-icon" src="assets/images/white_dropbox_glyph@2x.png">
