responsive image animation detection

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<h2>Why Dropbox for Business?</h2>
 					</div>
 				</div>
-				<div class="row">
+				<div id="business-page-image-animator" class="row imageAnimator">
 					<article class="col-4">
 						<div class="animate-image-wrapper">
 							<img src="assets/images/dropbox-for-business-why-devices@2x.png" alt="" class="animate-image">
