ie absolute div fix

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 				</ul>
 			</nav>
 			<section id="header">
-				<div class="header-bg-image"></div>
+				<div class="ie-fix">
+					<div class="header-bg-image"></div>
+				</div>
 				<a href="" class="mobile-menu-btn btn">Menu</a>
 				<div class="row">
 					<div id="icon-row" class="col-12 p-t-lg p-b">
