--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
 	<head>
 		<title>Dropbox for Business</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link href="https://cf.dropboxstatic.com/static/images/favicon-vflk5FiAC.ico" rel="shortcut icon">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" href="assets/css/dropbox.css">
@@ -34,7 +33,7 @@
 				<a href="" class="mobile-menu-btn btn">Menu</a>
 				<div class="row">
 					<div id="icon-row" class="col-12 p-t-lg p-b">
-						<img class="dropbox-icon" src="assets/images/white_dropbox_glyph@2x.png">
+						<img class="dropbox-icon" alt="" src="assets/images/white_dropbox_glyph@2x.png">
 					</div>
 				</div>
 				<div class="row">
@@ -144,7 +143,7 @@
 					</div>
 				</div>
 				<div class="play-btn"></div>
-				<video class="video" width="100%" height="100%" controls="">
+				<video class="video" controls="">
 					<source src="assets/videos/video_dfb_small.mov" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
